--- a/workouts/src/main/res/values/strings.xml
+++ b/workouts/src/main/res/values/strings.xml
@@ -10,4 +10,8 @@
 
     <string name="empty_list_title">Ooops</string>
     <string name="empty_list_subtitle">Список тренировок пуст</string>
+
+    <string name="common_error_title">Ошибка</string>
+    <string name="common_error_subtitle">Что-то пошло не так</string>
+    <string name="common_error_btn">Перезагрузить</string>
 </resources>
