--- a/player/src/main/res/values/strings.xml
+++ b/player/src/main/res/values/strings.xml
@@ -1,5 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+    <!--    Settings menu items-->
     <string name="speed">Speed</string>
     <string name="quality">Quality</string>
+
+    <!--    Speed menu items-->
+    <string name="speed_0_5x">0.5x</string>
+    <string name="speed_1x">1x</string>
+    <string name="speed_1_25x">1.25x</string>
+    <string name="speed_1_5x">1.5x</string>
+    <string name="speed_2x">2x</string>
+
+    <!--    Quality menu items-->
+    <string name="auto">Auto</string>
 </resources>
